<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="100"
        android:title="@string/filter"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_import"
        android:orderInCategory="100"
        android:title="@string/action_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:orderInCategory="100"
        android:title="@string/action_export"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info"
        android:orderInCategory="100"
        android:title="@string/info"
        app:showAsAction="never" />

</menu>