<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/contentPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner" />

                <EditText
                    android:id="@+id/owner"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/owner" />

            </LinearLayout>

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand" />

                <TextView
                    android:id="@+id/brand"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/brand" />

            </LinearLayout>

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model" />

                <TextView
                    android:id="@+id/model"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/model" />

            </LinearLayout>

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recordId" />

                <EditText
                    android:id="@+id/recordId"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recordId" />

            </LinearLayout>

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inventoryNumber" />

                <EditText
                    android:id="@+id/inventoryNumber"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inventoryNumber" />

            </LinearLayout>

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serialNumber" />

                <EditText
                    android:id="@+id/serialNumber"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/serialNumber" />

            </LinearLayout>

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imei" />

                <EditText
                    android:id="@+id/imei"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/imei" />

            </LinearLayout>

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/description"
                    style="@style/DetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description" />

            </LinearLayout>

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/password"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />

            </LinearLayout>

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team" />

                <TextView
                    android:id="@+id/team"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/team" />

            </LinearLayout>

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/location"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location" />

            </LinearLayout>

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buyer" />

                <TextView
                    android:id="@+id/buyer"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/buyer" />

            </LinearLayout>

            <LinearLayout
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adminRecord" />

                <EditText
                    android:id="@+id/adminRecord"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/adminRecord" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/remark" />

                <EditText
                    android:id="@+id/remark"
                    style="@style/DetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/remark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeLayout"
                style="@style/DetailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/time"
                    style="@style/DetailInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/historyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    style="@style/DetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/history" />

                <TextView
                    android:id="@+id/history"
                    style="@style/DetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/history"
                    android:lineSpacingExtra="5dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>